<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="nl.gassapp.gassapp.viewmodels.AddEditRefuelViewModel"
            />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Views.AddEditRefuelActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add refuel"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/addImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add image"
                        />

                    <ImageView
                        android:id="@+id/refuelImageThumbnail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>


                <EditText
                    android:id="@+id/kilometersInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Amount km driven"
                    android:inputType="numberDecimal"
                    android:afterTextChanged="@{(editable)->viewModel.afterKilometersTextChanged(editable)}"/>

                <EditText
                    android:id="@+id/priceInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Price"
                    android:inputType="numberDecimal"
                    android:afterTextChanged="@{(editable)->viewModel.afterPriceTextChanged(editable)}"/>

                <EditText
                    android:id="@+id/litersInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Liters"
                    android:inputType="numberDecimal"
                    android:afterTextChanged="@{(editable)->viewModel.afterLitersTextChanged(editable)}"/>

                <Button
                    android:id="@+id/addRefuelButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="save"
                    android:onClick="@{()->viewModel.onAddRefuelClicked()}"/>

            </LinearLayout>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>